--- a/public/css/side.sass
+++ b/public/css/side.sass
@@ -1,13 +1,23 @@
 .slideToggle
 	position: absolute
-	right: 0
+	left: -35px
 	bottom: 0
 	width: 35px
 	height: 35px
-	background-color: black
+	color: black
+	background-color: #EBEBEB
 	box-sizing: border-box
 	border-top-left-radius: 10%
 	padding-left: 20px
+	text-decoration: none
+	line-height: 40px
+	text-decoration: none
+
+a:hover
+	text-decoration: none
+
+.slideMenu.slideAlive
+	margin: 0
 
 .slideMenu
 	position: fixed
@@ -16,6 +26,19 @@
 	height: 100%
 	width: 100%
 	max-width: 200px
-	box-sizing: border-box
 	color: black
+	background-color: #EBEBEB
+	box-sizing: border-box
+	padding: 20px
+	color: black
+	text-decoration: none
+	margin-right: -200px
 	transition: margin 1000ms ease-in-out
+
+.slideToggle:before
+	content: 'login'
+	font-weight: 100
+	color: white
+
+.slideMenu.slideAlive .slideToggle:before
+	content: 'login'
