--- a/public/css/main.css
+++ b/public/css/main.css
@@ -2,7 +2,7 @@ html, body, .row, nav, .verticalNav2 {
   height: 100%;
   font-family: "Lato", sans-serif; }
 
-.verticalNav {
+#verticalNav {
   position: fixed;
   width: 20%;
   height: 100%;
@@ -15,7 +15,8 @@ html, body, .row, nav, .verticalNav2 {
   box-sizing: border-box; }
 
 .navHeader {
-  flex: 1; }
+  flex: 1;
+  font-weight: 300; }
   .navHeader a {
     transition: color 0.5s ease-in-out;
     color: black;
@@ -31,7 +32,7 @@ html, body, .row, nav, .verticalNav2 {
   flex: 2;
   box-sizing: border-box;
   padding-bottom: 80px;
-  font-weight: 800; }
+  font-weight: 300; }
 
 .footerIcons {
   display: flex;
@@ -51,9 +52,18 @@ html, body, .row, nav, .verticalNav2 {
 .blogNav li a:hover {
   color: white; }
 
-.singlePost img {
-  width: 100%;
-  height: auto; }
+.singlePost {
+  margin: 20px;
+  padding: 35px 0;
+  border-bottom: 3px solid #ff9c49;
+  border-right: 3px solid black;
+  border-left: 3px solid black;
+  margin-right: 5px;
+  margin-right: 5px; }
+
+.singlePost h2 {
+  margin-right: 10px;
+  margin-left: 10px; }
 
 .contactForm {
   border-top: 5px solid #ff9c49;
@@ -119,6 +129,7 @@ footer a i {
   transition: color 0.5s ease-in-out; }
 
 footer a i:hover {
+  font-weight: 300;
   color: white; }
 
 /*# sourceMappingURL=main.css.map */
