--- a/public/css/main.sass
+++ b/public/css/main.sass
@@ -1,6 +1,4 @@
-$darkBlue: #2a637f
-$mediumBlue: #8bb7cc
-$lightBlue: #ade4ff
+$mainOrange: #f99f54
 $font-stack: 'Lato', sans-serif
 
 
@@ -12,7 +10,7 @@ html, body, .row, nav, .verticalNav2
 	position: fixed
 	width: 20%
 	height: 100%
-	background-color: #f99f54
+	background-color: $mainOrange
 	display: flex
 	flex-direction: column
 	align-items: center
@@ -49,21 +47,24 @@ html, body, .row, nav, .verticalNav2
 	align-items: flex-end
 	padding-bottom: 10px
 
-.navHeader
 	
 .blogNav
 	li
 		list-style-type: none
 		padding: 10px
 		a
-			transition: color 0.3s ease-in-out
+			position: relative
+			transition: all 0.3s ease-in-out
+			-webkit-transform: scale(1)
 			color: black
 			padding: 10px
 .blogNav
 	li
 		a:hover
+			z-index: 2
 			color: white
-.searchBar
+			-webkit-transform: scale(1.2,1.2)
+
 	
 .singlePost
 	margin: 20px
@@ -78,8 +79,6 @@ html, body, .row, nav, .verticalNav2
 	h2
 		margin-right: 10px
 		margin-left: 10px
-		
-			
 		
 .contactForm
 	border-top: 5px solid #ff9c49
@@ -96,18 +95,6 @@ html, body, .row, nav, .verticalNav2
 	span
 		margin-right: auto
 		margin-left: auto
-.authButtons
-	a
-		button
-			position: relative
-			right: 5%
-			bottom: 10px
-			background-color: #ff9c49
-			border-color: #000
-
-.pushButton
-	background-color: #ff9c49
-	border-color: #000	
 
 .form-control
 	border-radius: 0
@@ -125,24 +112,6 @@ html, body, .row, nav, .verticalNav2
 		font-weight: 300
 		color: black
 
-#contactButton
-	font-weight: 100
-	background-color: #ff9c49
-	border-color: #ff9c49
-	border-radius: 6em
-
-.btn
-	color: #fff
-	background-color: #ff9c49
-	border-color: #000
-
-.btn:focus
-	background-color: #fff
-	color: orange
-	border-color: none
-
-button:focus
-	border-color: none
 footer
 	a
 		i
@@ -155,3 +124,34 @@ footer
 		i:hover
 			font-weight: 300
 			color: white
+
+
+.btn 
+	padding: 14px 24px
+	border: 0 none
+	font-weight: 700
+	letter-spacing: 1px
+	text-transform: uppercase
+
+.btn
+	padding: 14px 24px
+	border: 0 none
+	font-weight: 700
+	letter-spacing: 1px
+	text-transform: uppercase
+	&:focus, &:active:focus, &.active:focus
+		outline: 0 none
+
+.btn-primary
+	background: #0099cc
+	color: #ffffff
+	&:hover, &:focus, &:active, &.active
+		background: #33a6cc
+
+.open > .dropdown-toggle.btn-primary
+	background: #33a6cc
+
+.btn-primary
+	&:active, &.active
+		background: #007299
+		box-shadow: none
