--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1,138 +1,6 @@
-html, body, .row, nav, .verticalNav2 {
-  height: 100%;
-  font-family: "Lato", sans-serif; }
-
-#verticalNav {
-  position: fixed;
-  width: 20%;
-  height: 100%;
-  background-color: #f99f54;
+.siteContainer {
   display: flex;
   flex-direction: column;
-  align-items: center;
-  align-content: center;
-  justify-content: center;
-  box-sizing: border-box; }
-
-.navHeader {
-  flex: 1;
-  font-weight: 300; }
-  .navHeader a {
-    transition: color 0.5s ease-in-out;
-    color: black;
-    padding: 7px; }
-
-.navHeader a:hover {
-  color: white; }
-
-.navItems {
-  display: flex;
-  justify-content: flex-end;
-  align-items: flex-end;
-  flex: 2;
-  box-sizing: border-box;
-  padding-bottom: 80px;
-  font-weight: 300; }
-
-.footerIcons {
-  display: flex;
-  flex: 1;
-  justify-content: flex-end;
-  align-items: flex-end;
-  padding-bottom: 10px; }
-
-.blogNav li {
-  list-style-type: none;
-  padding: 10px; }
-  .blogNav li a {
-    position: relative;
-    transition: all 0.3s ease-in-out;
-    -webkit-transform: scale(1);
-    color: black;
-    padding: 10px; }
-
-.blogNav li a:hover {
-  z-index: 2;
-  color: white;
-  -webkit-transform: scale(1.2, 1.2); }
-
-.singlePost {
-  margin: 20px;
-  padding: 35px 0;
-  border-bottom: 3px solid #ff9c49;
-  border-right: 3px solid black;
-  border-left: 3px solid black;
-  margin-right: 5px;
-  margin-right: 5px; }
-
-.singlePost h2 {
-  margin-right: 10px;
-  margin-left: 10px; }
-
-.contactForm {
-  border-top: 5px solid #ff9c49;
-  margin-top: 75px; }
-
-#contactHeading {
-  text-align: center;
-  font-size: 3em;
-  font-weight: 700;
-  color: #ff9c49; }
-
-#newsLetter span {
-  margin-right: auto;
-  margin-left: auto; }
-
-.form-control {
-  border-radius: 0; }
-
-.form-group label {
-  color: #2a637f; }
-
-.form-control:focus {
-  border-color: #ff831c;
-  box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 8px rgba(255, 0, 0, 0.6); }
-
-.form-group label {
-  font-weight: 300;
-  color: black; }
-
-footer a i {
-  padding: 10px;
-  color: black;
-  transition: color 0.5s ease-in-out; }
-
-footer a i:hover {
-  font-weight: 300;
-  color: white; }
-
-.btn {
-  padding: 14px 24px;
-  border: 0 none;
-  font-weight: 700;
-  letter-spacing: 1px;
-  text-transform: uppercase; }
-
-.btn {
-  padding: 14px 24px;
-  border: 0 none;
-  font-weight: 700;
-  letter-spacing: 1px;
-  text-transform: uppercase; }
-  .btn:focus, .btn:active:focus, .btn.active:focus {
-    outline: 0 none; }
-
-.btn-primary {
-  background: #0099cc;
-  color: #ffffff; }
-  .btn-primary:hover, .btn-primary:focus, .btn-primary:active, .btn-primary.active {
-    background: #33a6cc; }
-
-.open > .dropdown-toggle.btn-primary {
-  background: #33a6cc; }
-
-.btn-primary:active, .btn-primary.active {
-  background: #007299;
-  box-shadow: none; }
+  background-color: blue; }
 
 /*# sourceMappingURL=main.css.map */
