cleaning up the containers on the views and taking out bootstrap

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1,6 +1,9 @@
+html, body {
+  height: 100%;
+  background-color: grey; }
+
 .siteContainer {
   display: flex;
-  flex-direction: column;
-  background-color: blue; }
+  flex-direction: column; }
 
 /*# sourceMappingURL=main.css.map */
