--- a/public/css/main.sass
+++ b/public/css/main.sass
@@ -1,4 +1,7 @@
+html, body
+	height: 100%
+	background-color: grey
+	
 .siteContainer
 	display: flex
 	flex-direction: column
-	background-color: blue
