--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1,9 +1,31 @@
 html, body {
   height: 100%;
-  background-color: grey; }
+  width: 100%;
+  background-color: #efefef;
+  margin: 0; }
 
-.siteContainer {
+/* Parent Container for child elements */
+.flexContainer {
+  width: 100%;
+  height: 100%;
+  display: flex; }
+
+/* Child flex/nav container */
+/* NAV */
+.navigationSidebar {
+  min-width: 300px;
+  height: 100%;
+  border: 1px solid green; }
+
+/* Child content/container */
+/* CONTENT */
+.contentContainer {
   display: flex;
-  flex-direction: column; }
+  flex-direction: row;
+  justify-content: space-between;
+  height: 100%;
+  width: 100%;
+  border: 1px solid blue;
+  margin: 0px; }
 
 /*# sourceMappingURL=main.css.map */
