--- a/public/css/main.sass
+++ b/public/css/main.sass
@@ -1,7 +1,36 @@
 html, body
 	height: 100%
-	background-color: grey
-	
-.siteContainer
+	width: 100%
+	background-color: #efefef
+	margin: 0
+
+/* Parent Container for child elements */
+.flexContainer
+	width: 100%
+	height: 100%
 	display: flex
-	flex-direction: column
+
+
+
+/* Child flex/nav container */
+/* NAV */
+.navigationSidebar
+	min-width: 300px
+	height: 100%
+	border: 1px solid green
+
+
+
+/* Child content/container */
+/* CONTENT */
+.contentContainer
+	display: flex
+	flex-direction: row
+	justify-content: space-between
+	height: 100%
+	width: 100%
+	border: 1px solid blue
+	margin: 0px
+
+
+
