--- a/public/css/main.sass
+++ b/public/css/main.sass
@@ -18,7 +18,30 @@ html, body
 	min-width: 300px
 	height: 100%
 	border: 1px solid green
+	display: flex
+	flex-direction: column
 
+.navContainer
+	flex-basis: 70%
+	width: 100%
+	border: 1px solid orange
+	display: flex
+	flex-direction: column
+	justify-content: center
+	align-items: center
+	list-style-type: none
+
+.footerContainer
+	box-sizing: border-box
+	flex-basis: 30%
+	width: 100%
+	border: 1px solid pink
+	display: flex
+	justify-content: center
+	align-items: flex-end
+
+.footerAnchor
+	margin: 0 15px 35px 15px
 
 
 /* Child content/container */
