--- a/public/css/main.sass
+++ b/public/css/main.sass
@@ -1,4 +1,5 @@
 html, body
+	font-family: 'Source Sans Pro', sans-serif
 	height: 100%
 	width: 100%
 	background-color: #efefef
@@ -12,40 +13,49 @@ html, body
 
 
 
-/* Child flex/nav container */
 /* NAV */
+/* .flexContainer Child */
 .navigationSidebar
 	min-width: 300px
 	height: 100%
 	border: 1px solid green
 	display: flex
 	flex-direction: column
+	background-color: #ffd24d
 
+/* .navigationSidebar Child */
 .navContainer
-	flex-basis: 70%
+	flex-basis: 90%
 	width: 100%
-	border: 1px solid orange
 	display: flex
 	flex-direction: column
 	justify-content: center
 	align-items: center
 	list-style-type: none
 
+/* .navigationSidebar Child */
+.navItem
+	margin-bottom: 20px
+	a
+		text-decoration: none
+		color: black
+
+/* .navigationSidebar Child */
 .footerContainer
 	box-sizing: border-box
-	flex-basis: 30%
+	flex-basis: 10%
 	width: 100%
-	border: 1px solid pink
 	display: flex
 	justify-content: center
 	align-items: flex-end
+	a
+		margin: 0 15px 35px 15px
+		i
+			color: black
 
-.footerAnchor
-	margin: 0 15px 35px 15px
 
-
-/* Child content/container */
 /* CONTENT */
+/* .flexContainer Child */
 .contentContainer
 	display: flex
 	flex-direction: row
