--- a/public/css/main.css
+++ b/public/css/main.css
@@ -14,8 +14,8 @@ html, body {
 /* NAV */
 /* .flexContainer Child */
 .navigationSidebar {
-  min-width: 300px;
-  height: 100%;
+  position: fixed;
+  width: 300px;
   border: 1px solid green;
   display: flex;
   flex-direction: column;
@@ -23,11 +23,11 @@ html, body {
 
 /* .navigationSidebar Child */
 .navContainer {
-  flex-basis: 90%;
+  flex-basis: 63%;
   width: 100%;
   display: flex;
   flex-direction: column;
-  justify-content: center;
+  justify-content: flex-end;
   align-items: center;
   list-style-type: none; }
 
@@ -36,12 +36,15 @@ html, body {
   margin-bottom: 20px; }
   .navItem a {
     text-decoration: none;
-    color: black; }
+    color: black;
+    transition: color 0.2s ease-in; }
+  .navItem a:hover {
+    color: white; }
 
 /* .navigationSidebar Child */
 .footerContainer {
   box-sizing: border-box;
-  flex-basis: 10%;
+  flex-basis: 37%;
   width: 100%;
   display: flex;
   justify-content: center;
@@ -49,7 +52,10 @@ html, body {
   .footerContainer a {
     margin: 0 15px 35px 15px; }
     .footerContainer a i {
-      color: black; }
+      color: black;
+      transition: color 0.2s ease-ina; }
+    .footerContainer a i:hover {
+      color: white; }
 
 /* CONTENT */
 /* .flexContainer Child */
